manifests/app-tcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-${PORT}
  labels:
    app: echo-${PORT}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-${PORT}
  template:
    metadata:
      labels:
        app: echo-${PORT}
    spec:
      containers:
      - name: echo
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - "ALL"
          runAsNonRoot: true
          seccompProfile:
            type: "RuntimeDefault"
        image: docker.io/istio/tcp-echo-server:1.2
        args:
        - "$PORT"
        - "Received on port $PORT:"
        ports:
        - containerPort: ${PORT}
          protocol: TCP
          name: echo-${PORT}
---
apiVersion: v1
kind: Service
metadata:
  name: echo-${PORT}
spec:
  selector:
    app: echo-${PORT}
  ports:
  - name: echo-${PORT}
    protocol: TCP
    port: ${PORT}
    targetPort: echo-${PORT}
