manifests/gateway-9000.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-9000
spec:
  selector:
    istio: ingressgateway-9000 # use the ingressgateway-8000 gateway
  servers: # one server per each application
  - port:
      number: 9091
      name: echo-9091
      protocol: TCP
    hosts:
    - "*"
  - port:
      number: 9092
      name: echo-9092
      protocol: TCP
    hosts:
    - "*"
  - port:
      number: 9093
      name: echo-9093
      protocol: TCP
    hosts:
    - "*"
