manifests/virtualservice-8000.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-server-8000
spec:
  hosts:
  - "*"
  gateways:
  - gateway-8000
  tcp: # routing rules per each port
  - match:
    - port: 8081
    route:
    - destination:
        host: echo-8081.echo-server-8000.svc.cluster.local
        port:
          number: 8081
  - match:
    - port: 8082
    route:
    - destination:
        host: echo-8082.echo-server-8000.svc.cluster.local
        port:
          number: 8082
  - match:
    - port: 8083
    route:
    - destination:
        host: echo-8083.echo-server-8000.svc.cluster.local
        port:
          number: 8083
