manifests/gateway-8000-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingressgateway-8000
  namespace: gateways
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway-8000
  ports:
  - name: echo-8081
    port: 8081
    targetPort: 8081
  - name: echo-8082
    port: 8082
    targetPort: 8082
  - name: echo-8083
    port: 8083
    targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingressgateway-8000
  namespace: gateways
spec:
  selector:
    matchLabels:
      istio: ingressgateway-8000
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        istio: ingressgateway-8000
        sidecar.istio.io/inject: "true" 
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: istio
                operator: In
                values:
                - ingressgateway-8000
            topologyKey: kubernetes.io/hostname
      containers:
      - name: istio-proxy
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - "ALL"
          runAsNonRoot: true
          seccompProfile:
            type: "RuntimeDefault"
        image: auto
      topologySpreadConstraints:
      - labelSelector:
          matchExpressions:
          - key: istio
            operator: In
            values:
            - ingressgateway-8000
        maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingressgateway-8000
  namespace: gateways
spec:
  podSelector:
    matchLabels:
      istio: ingressgateway-8000
  ingress:
    - {}
  policyTypes:
  - Ingress
