manifests/gateway-9000-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingressgateway-9000
  namespace: gateways
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway-9000
  ports:
  - name: status
    port: 15021
    targetPort: 15021
  - name: echo-9091
    port: 9091
    targetPort: 9091
  - name: echo-9092
    port: 9092
    targetPort: 9092
  - name: echo-9093
    port: 9093
    targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingressgateway-9000
  namespace: gateways
spec:
  selector:
    matchLabels:
      istio: ingressgateway-9000
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        istio: ingressgateway-9000
        sidecar.istio.io/inject: "true" 
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: istio
                operator: In
                values:
                - ingressgateway-9000
            topologyKey: kubernetes.io/hostname
      containers:
      - name: istio-proxy
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - "ALL"
          runAsNonRoot: true
          seccompProfile:
            type: "RuntimeDefault"
        image: auto
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15021
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
      topologySpreadConstraints:
      - labelSelector:
          matchExpressions:
          - key: istio
            operator: In
            values:
            - ingressgateway-9000
        maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingressgateway-9000
  namespace: gateways
spec:
  podSelector:
    matchLabels:
      istio: ingressgateway-9000
  ingress:
    - {}
  policyTypes:
  - Ingress
